# maxwell

./: .gitignore  CMakeLists.txt  README.md
devtools/: replace.sh
example/: crabcav.py  cylinder.py  dcylmcyl.py  do-configure.sh  dsphmsph.py  hdf5-do-configure.sh  phc-sapph-r0.37.py  phcMu.py  pillWTubes.py  pillbox.py  run.py  runMx.sh  trilinos-do-configure.sh  vacuum.py
src/: CMakeLists.txt  MxAnasaziMV.cpp  MxAnasaziMV.hpp  MxCartBox.cpp  MxCartBox.hpp  MxCartRect.hpp  MxCartSeg.hpp  MxComm.hpp  MxCone.hpp  MxConfig.h.in  MxConvexPolygon.cpp  MxConvexPolygon.h  MxConvexPolyhedron.cpp  MxConvexPolyhedron.h  MxCrabCav.h  MxCrsMatrix.cpp  MxCrsMatrix.hpp  MxCylinder.hpp  MxDielectric.cpp  MxDielectric.hpp  MxDimMatrix.hpp  MxDimVector.hpp  MxDynMatrix.hpp  MxEMOps.cpp  MxEMOps.h  MxEMSim.cpp  MxEMSim.h  MxEMSimHierarchy.cpp  MxEMSimHierarchy.h  MxEikxOp.cpp  MxEikxOp.h  MxEllipsoid.hpp  MxGeoMultigridPrec.cpp  MxGeoMultigridPrec.h  MxGrid.cpp  MxGrid.h  MxGridDomain.cpp  MxGridDomain.h  MxGridDomainIter.hpp  MxGridField.cpp  (+83 more)
test/: AnasaziInterface.cpp  CMakeLists.txt  RCPTest.cpp
